# bonk-battle-v1

./: .gitignore  ACTIVITY_FEED_FILES.md  ACTIVITY_FEED_LIVE.md  ADMIN_DASHBOARD.md  BATTLE_CARD_DESIGN.md  BONK_PROGRAM_ID_UPDATED.md  DISCRIMINATORS.md  FINAL_SUMMARY.md  HIDDEN_FEATURES_SEASON1.md  HIDE_COMPONENTS.md  IMPLEMENTATION_SUMMARY.md  Keeper-automation-complete.md  NETWORK_SWITCHING_COMPLETE.md  NETWORK_SWITCHING_IMPLEMENTATION.md  POTENTIALS_TRANSFORMATION.md  README.md  ROADMAP.md  RPC_OPTIMIZATION_GUIDE.md  SESSION_2_COMPLETED.md  SESSION_3_COMPLETED.md  SESSION_4_COMPLETED.md  SESSION_5_COMPLETED.md  SESSION_5_PROGRESS.md  TECHNICAL_SUMMARY.md  TRANSITION_GUIDE.md  battle_state.json  calculate-discriminators.js  extract-private-key.js  migrate.sh  package-lock.json  package.json  test-deserialize.js
.claude/: settings.local.json
.devcontainer/: devcontainer.json  setup.sh
anchor/: Anchor.toml  Cargo.lock.broken  Cargo.lock.old  Cargo.toml  build.sh  decode_token_launch.js  package.json  test-create.ts  verify_token.js
anchor.BACKUP_20251022_220000/: .gitignore  Anchor.toml  migrate.sh  test-buy.ts
anchor/programs/bonk_battle/: Cargo.toml
anchor/programs/bonk_battle/src/: lib.rs  lib.rs.V2_LOCAL_BACKUP
app/: .gitignore  calc-discriminator.js  check-both.js  check-onchain.cjs  convert-keeper-to-base58.js  convert-key.js  dump-bytes.js  find-offset.js  next.config.js  next.config.ts  package-lock.json  package.json  recover-keeper.js  server.js  setup.ps1  structure.txt  tailwind.config.ts  test-anchor.ts  test-direct.js  test-idl.ts  test-names.ts  (+9 more)
(+283 files in other folders)
